--- a/index.html
+++ b/index.html
@@ -4,13 +4,55 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>2019 - Доедим свинью вместе</title>
+  <title>🐷2019 - Доедим свинью вместе</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="2019 подходит к концу - Доедим свинью">
+  <meta name="description" content="Год подходит к концу, нужно успеть...">
   <meta name="author" content="Ruben Babaev">
-  <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> -->
+  <link rel="shortcut icon" href="favicon.ico">
+  <!-- <link rel="image_src" href="http://artchallenge.ru/share.jpg"> -->
+
+  <!-- <meta property="og:type" content="website" />
+  <meta property="og:url" content="http://artchallenge.ru/" />
+  <meta property="og:image" content="http://artchallenge.ru/share.jpg" />
+  <meta property="og:site_name" content="Art Challenge"/>
+  <meta property="og:title" content="Art Challenge – A Quiz Game of Famous Painters" />
+  <meta property="og:description" content="Try to guess 10 painters in a row and beat your friends! " /> -->
+
   <link href="css/bootstrap-theme.min.css" rel="stylesheet">
   <link href="css/custom.css" rel="stylesheet">
+
+  <script type="text/javascript" src="https://vk.com/js/api/openapi.js?162"></script>
+
+  <script type="text/javascript">
+    VK.init({
+      apiId: 2829915,
+      onlyWidgets: true
+    });
+  </script>
+
+  <!-- Yandex.Metrika counter -->
+  <script type="text/javascript">
+    (function(m, e, t, r, i, k, a) {
+      m[i] = m[i] || function() {
+        (m[i].a = m[i].a || []).push(arguments)
+      };
+      m[i].l = 1 * new Date();
+      k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
+    })
+    (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+    ym(56668807, "init", {
+      clickmap: true,
+      trackLinks: true,
+      accurateTrackBounce: true,
+      webvisor: true
+    });
+  </script>
+  <noscript><div><img src="https://mc.yandex.ru/watch/56668807" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+  <!-- /Yandex.Metrika counter -->
+
+
+
 </head>
 
 <body>
@@ -35,53 +77,68 @@
       <li class="nav-item">
       <a class="nav-link" href="#">About</a>
     </li> -->
-  </ul>
-  <span class="text-white" style="text-align: right">
+      </ul>
+      <span class="text-white" style="text-align: right">
     <text class="h4">8 800 777 0878</text>
     <br>
     Телефон Доставки
   </span>
-  <!-- <form class="form-inline my-2 my-lg-0">
+      <!-- <form class="form-inline my-2 my-lg-0">
   <input class="form-control mr-sm-2" type="text" placeholder="Search">
   <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
 </form> -->
-</div>
-</nav>
+    </div>
+  </nav>
 
 
-<div class="jumbotron" >
-  <p class="lead ">Год свиньи подходит к концу и мы решили проводить его особым образом – успеть за оставшиеся дни съесть 2019 пицц с беконом!</p>
-  <br>
-  <div class="text-center">
-    <h1 style="font-size: 133px" class="display-1 mb-0">2019</h1>
-    <h4>Пицц осталось</h4>
-  </div>
-  <br><br>
-  <p class="lead">Участвуй в розыгрыше 30 000 рублей от сети пиццерий Сицилия:</p>
-  <ul>
-    <li>Съешьте любую пиццу с беконом, карбонатом или ветчиной в составе</li>
-    <li>Сфотографируйте чек</li>
-    <li>Отмечайтсь в <a href="#">этом посте в Instagram</a> или <a href="#">ВКонтакте</a> и участвуйте в розыгрыше 30 000 рублей на новогодние праздники</li>
-  </ul>
-  <p>Принять участие можно <a href="http://pizza-siclilia.ru">заказав доставку</a> или лично посетив одну из пиццерий Сицилия в Ростове-на-Дону, Адлере, Анапе, Геленджике, Новороссийске, Сочи, Армварире, Белореченске, Горячем Ключе, Кропоткине, Майкопе, Усть-Лабинске, Каневской, Кореновске, Крымске, Ленинградской, Славянске-на-Кубани, Тимашевске и Тихорецке</p>
-  <br><br>
-  <div class="text-center">
-    <h4>Пиццы, которые принимют участие</h4>
-  </div>
-  <hr class="my-4">
-  <br>
+  <div class="jumbotron">
+    <p class="lead">Год свиньи подходит к концу и мы решили проводить его особым образом – Успеть съесть 2019 пицц с беконом до конца года!</p>
+    <br>
+    <div class="text-center">
+      <h1 style="font-size: 133px" class="display-1 mb-0">2019</h1>
+      <h5>Пицц осталось</h5>
+    </div>
+    <br><br>
+    <p class="lead">Участвуй в розыгрыше 30 000 рублей от сети пиццерий Сицилия:</p>
+    <ul>
+      <li>Съешьте любую пиццу с беконом, карбонатом или ветчиной</li>
+      <li>Сфотографируйте чек</li>
+      <li>Отмечайтсь в <a href="#">этом посте в Instagram</a> или <a href="#">ВКонтакте</a> и участвуйте в розыгрыше 30 000 рублей на новогодние праздники</li>
+    </ul>
+    <p>Принять участие можно <a href="https://pizza-siclilia.ru">заказав доставку</a> или посетив любую пиццерию Сицилия в Ростове-на-Дону, Адлере, Анапе, Геленджике, Новороссийске, Сочи, Армварире, Белореченске, Горячем Ключе, Кропоткине, Майкопе, Усть-Лабинске,
+      Каневской, Кореновске, Крымске, Ленинградской, Славянске-на-Кубани, Тимашевске и Тихорецке.</p>
+    <br><br>
+    <div class="text-center">
+      <h4>Пиццы, которые принимают участие</h4>
+    </div>
+    <hr class="my-4">
+    <br>
     <div class="row text-center m-0" style="">
 
       <div class="col p-1">
         <div class="card mb-3 text-center">
-          <img class="p-1" style="" width="100%" src="pics/1.png" alt="Pizza">
+          <img class="p-1" style="" width="100%" src="pics/sicilia.png" alt="Pizza">
           <div class="card-body p-2 pb-3">
-            <p class="h4 card-text">Пицца Сицилия</p>
-            <p>Ветчина, Сервелат, Грибы, Томаты, Лук-карамель, сыр Моцарелла</p>
-            <p></p>
+            <p class="h4 card-text">Сицилия</p>
+            <p class="small" style="height: 100px">Ветчина, Сервелат, Грибы, Томаты, Лук-карамель, сыр Моцарелла</p>
             <p>40см, 1000г – 745р</p>
             <a class="card-link">
-              <a class="btn btn-primary btn-lg" href="https://dostavka.pizza-sicilia.ru" role="button">Заказать</a>
+            <a class="btn btn-primary btn-lg" href="https://dostavka.pizza-sicilia.ru/pitstsa/pizza-40-cm-large/sitsiliya-pitstsa" role="button">Заказать</a>
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col p-1">
+        <div class="card mb-3 text-center">
+          <img class="p-1 rotate" width="100%" src="pics/supreme.png" alt="Pizza">
+          <div class="card-body p-2 pb-3">
+            <p class="h4 card-text">Суприм</p>
+            <p class="small" style="height: 100px">Ветчина, Томаты, Грибы Шампиньоны, Огурцы Маринованные, Томатный Соус, Сыр Моцарелла, Соус Гриль, Перец Халапеньо, Колбаса Чили, Петрушка</p>
+            <p></p>
+            <p>30см, 600г – 415р</p>
+            <a class="card-link">
+            <a class="btn btn-primary btn-lg" href="https://dostavka.pizza-sicilia.ru/pitstsa/pizza-30-cm-medium/suprim" role="button">Заказать</a>
             </a>
           </div>
         </div>
@@ -89,14 +146,14 @@
 
       <div class="col p-1">
         <div class="card mb-3 text-center ">
-          <img class="p-1 rotate" style="" width="100%" src="pics/1.png" alt="Pizza">
+          <img class="p-1" style="" width="100%" src="pics/cesar.png" alt="Pizza">
           <div class="card-body p-2 pb-3">
-            <p class="h4 card-text">Пицца Сицилия</p>
-            <p>Ветчина, Сервелат, Грибы, Томаты, Лук-карамель, сыр Моцарелла</p>
+            <p class="h4 card-text">Цезарь</p>
+            <p class="small" style="height: 100px">Куриное Филе, Ветчина, Бекон, Сыр Пармезан, Сыр Моцарелла, Салат Айсберг, Соус Цезарь, Томаты, Карамелизированный Лук</p>
             <p></p>
-            <p>40см, 1000г – 745р</p>
+            <p>40см, 1100г – 745р</p>
             <a class="card-link">
-              <a class="btn btn-primary btn-lg" href="https://dostavka.pizza-sicilia.ru" role="button">Заказать</a>
+            <a class="btn btn-primary btn-lg" href="https://dostavka.pizza-sicilia.ru/pitstsa/pizza-40-cm-large/tsezar" role="button">Заказать</a>
             </a>
           </div>
         </div>
@@ -104,14 +161,14 @@
 
       <div class="col p-1">
         <div class="card mb-3 text-center ">
-          <img class="p-1" style="" width="100%" src="pics/1.png" alt="Pizza">
+          <img class="p-1 rotate" style="" width="100%" src="pics/manchester.png" alt="Pizza">
           <div class="card-body p-2 pb-3">
-            <p class="h4 card-text">Пицца Сицилия</p>
-            <p>Ветчина, Сервелат, Грибы, Томаты, Лук-карамель, сыр Моцарелла</p>
+            <p class="h4 card-text">Манчестер</p>
+            <p class="small" style="height: 100px">Куриное Филе, Бекон, Томаты, Луковый Конфитюр, Томатный Соус, Соус Барбекю, Сыр Моцарела, Прованские Травы</p>
             <p></p>
-            <p>40см, 1000г – 745р</p>
+            <p>40см, 1000г – 775р</p>
             <a class="card-link">
-              <a class="btn btn-primary btn-lg" href="https://dostavka.pizza-sicilia.ru" role="button">Заказать</a>
+            <a class="btn btn-primary btn-lg" href="https://dostavka.pizza-sicilia.ru/pitstsa/pizza-40-cm-large/manchester" role="button">Заказать</a>
             </a>
           </div>
         </div>
@@ -119,67 +176,77 @@
 
       <div class="col p-1">
         <div class="card mb-3 text-center ">
-          <img class="p-1 rotate" style="" width="100%" src="pics/1.png" alt="Pizza">
+          <img class="p-1" style="" width="100%" src="pics/po-derevenski.png" alt="Pizza">
           <div class="card-body p-2 pb-3">
-            <p class="h4 card-text">Пицца Сицилия</p>
-            <p>Ветчина, Сервелат, Грибы, Томаты, Лук-карамель, сыр Моцарелла</p>
+            <p class="h4 card-text">По-Деревенски</p>
+            <p class="small" style="height: 100px">Куриное Филе, Сыр Моцарелла, Копчёный Карбонад, Маринованные Огурцы, Шампиньоны, Зелёный Лук, Томаты, Красный Лук, Томатный Соус</p>
             <p></p>
-            <p>40см, 1000г – 745р</p>
+            <p>40см, 1100г – 689р</p>
             <a class="card-link">
-              <a class="btn btn-primary btn-lg" href="https://dostavka.pizza-sicilia.ru" role="button">Заказать</a>
+            <a class="btn btn-primary btn-lg" href="https://dostavka.pizza-sicilia.ru/pitstsa/pizza-40-cm-large/poderevenski" role="button">Заказать</a>
             </a>
           </div>
         </div>
       </div>
 
-      <div class="col p-1">
-        <div class="card mb-3 text-center ">
-          <img class="p-1" style="" width="100%" src="pics/1.png" alt="Pizza">
-          <div class="card-body p-2 pb-3">
-            <p class="h4 card-text">Пицца Сицилия</p>
-            <p>Ветчина, Сервелат, Грибы, Томаты, Лук-карамель, сыр Моцарелла</p>
-            <p></p>
-            <p>40см, 1000г – 745р</p>
-            <a class="card-link">
-              <a class="btn btn-primary btn-lg" href="https://dostavka.pizza-sicilia.ru" role="button">Заказать</a>
-            </a>
-          </div>
-        </div>
-      </div>
-
-  </div>
+    </div>
 
 
-  <br>
-  <div class="text-center">
-    <h4>Единый Номер Доставки</h4>
-    <h1>8 800 777 0878</h1>
-  </div>
-
-  <!-- <p class="lead">
-    <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-  </p> -->
-
-
-
-
-
-
-
-</div>
-<div class="pb-1 text-center">
-  <p>Счастливого Нового Года!
     <br>
-  <a href="http://pizza-sicilia.ru">Pizza-Sicilia.ru</a>
-  </p>
-</div>
-<!-- Optional JavaScript -->
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <div class="text-center">
+      <h4>Единый Номер Доставки</h4>
+      <h1>8 800 777 0878</h1>
+    </div>
 
-<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-<script src="js/snow-fall.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <!-- <p class="lead">
+  <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+</p> -->
+
+    <hr class="my-4">
+
+    <br>
+    <p class="">Для "Сицилии" это был крутой год, мы открыли несколько новых пиццерий, провели битву официантов, запустили новое меню, выйграли в конкурсе HoReCa Don, на черную пятнцу просто выгорели всеми 33 ресторанам и центральным офисом от количества заказов,
+      отметили 30-лейтний юбилей компании, сняли видео о мечатх сотрудников и еще много чего.</p>
+    <p>Расскажите, как прошел год у Вас? Свинья принесла удачу или прошла незаметно? Что самого крутого и необычного случилось с Вами в этом году?</p>
+    <br>
+    <!-- Put this div tag to the place, where the Comments block will be -->
+    <div class="row">
+
+      <div id="vk_comments"></div>
+
+
+    </div>
+
+
+
+  </div>
+  <div class="pb-1 text-center">
+    <p>Счастливого Нового Года!
+      <br>
+      <a href="http://pizza-sicilia.ru">Pizza-Sicilia.ru</a>
+    </p>
+
+    <script src="https://yastatic.net/es5-shims/0.0.2/es5-shims.min.js"></script>
+    <script src="https://yastatic.net/share2/share.js"></script>
+    <div class="ya-share2" data-services="vkontakte,facebook,odnoklassniki,twitter,viber,whatsapp,telegram"></div>
+
+    <br>
+
+  </div>
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+  <script src="js/snow-fall.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
+  <script type="text/javascript">
+    VK.Widgets.Comments("vk_comments", {
+      limit: 20,
+      attach: "*"
+    });
+  </script>
 </body>
 
 </html>
