Fck mobile grid

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <br>
     <div class="row text-center m-0" style="">
 
-      <div class="col p-1">
+      <div class="col-12 col-md-3 p-1">
         <div class="card mb-3 text-center">
           <img class="p-1" style="" width="100%" src="pics/sicilia.png" alt="Pizza">
           <div class="card-body p-2 pb-3">
@@ -129,7 +129,7 @@
         </div>
       </div>
 
-      <div class="col p-1">
+      <div class="col-12 col-md-3 p-1">
         <div class="card mb-3 text-center">
           <img class="p-1 rotate" width="100%" src="pics/supreme.png" alt="Pizza">
           <div class="card-body p-2 pb-3">
@@ -144,7 +144,7 @@
         </div>
       </div>
 
-      <div class="col p-1">
+      <div class="col-12 col-md-3 p-1">
         <div class="card mb-3 text-center ">
           <img class="p-1" style="" width="100%" src="pics/cesar.png" alt="Pizza">
           <div class="card-body p-2 pb-3">
@@ -159,7 +159,7 @@
         </div>
       </div>
 
-      <div class="col p-1">
+      <div class="col-12 col-md-3 p-1">
         <div class="card mb-3 text-center ">
           <img class="p-1 rotate" style="" width="100%" src="pics/manchester.png" alt="Pizza">
           <div class="card-body p-2 pb-3">
@@ -174,7 +174,7 @@
         </div>
       </div>
 
-      <div class="col p-1">
+      <div class="col-12 col-md-3 p-1">
         <div class="card mb-3 text-center ">
           <img class="p-1" style="" width="100%" src="pics/po-derevenski.png" alt="Pizza">
           <div class="card-body p-2 pb-3">
