--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta name="description" content="Год подходит к концу, нужно успеть...">
   <meta name="author" content="Ruben Babaev">
   <link rel="shortcut icon" href="favicon.ico">
+
   <!-- <link rel="image_src" href="http://artchallenge.ru/share.jpg"> -->
 
   <!-- <meta property="og:type" content="website" />
@@ -20,6 +21,7 @@
 
   <link href="css/bootstrap-theme.min.css" rel="stylesheet">
   <link href="css/custom.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet">
 
   <script type="text/javascript" src="https://vk.com/js/api/openapi.js?162"></script>
 
@@ -90,22 +92,24 @@
     </div>
   </nav>
 
-
   <div class="jumbotron">
-    <p class="lead">Год свиньи подходит к концу и мы решили проводить его особым образом – Успеть съесть 2019 пицц с беконом до конца года!</p>
+    <p class="lead">Год свиньи подходит к концу и мы решили проводить его особым образом – съесть 2019 пицц с беконом до конца года!</p>
     <br>
     <div class="text-center">
-      <h1 style="font-size: 133px" class="display-1 mb-0">2019</h1>
-      <h5>Пицц осталось</h5>
+      <h5>🍕Пицц с 🐷беконом осталось съесть:</h5>
+      <h1 id="pizzaCount" style="font-size: 133px; font-family: 'Lobster', cursive;" class="display-1">2019</h1>
+      <div class="progress" style='height: 48px'>
+        <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 100%;" aria-valuenow="2019" aria-valuemin="0" aria-valuemax="2019">100%</div>
+      </div>
     </div>
     <br><br>
     <p class="lead">Участвуй в розыгрыше 30 000 рублей от сети пиццерий Сицилия:</p>
     <ul>
-      <li>Съешьте любую пиццу с беконом, карбонатом или ветчиной</li>
-      <li>Сфотографируйте чек</li>
-      <li>Отмечайтсь в <a href="#">этом посте в Instagram</a> или <a href="#">ВКонтакте</a> и участвуйте в розыгрыше 30 000 рублей на новогодние праздники</li>
+      <li>Съешь любую пиццу с беконом, карбонатом или ветчиной</li>
+      <li>Сфотографируй или сохрани чек</li>
+      <li>Отмечайся в <a href="#">этом посте в Instagram</a> или <a href="#">ВКонтакте</a> и участвуй в розыгрыше 30 000 рублей на новогодние праздники</li>
     </ul>
-    <p>Принять участие можно <a href="https://pizza-siclilia.ru">заказав доставку</a> или посетив любую пиццерию Сицилия в Ростове-на-Дону, Адлере, Анапе, Геленджике, Новороссийске, Сочи, Армварире, Белореченске, Горячем Ключе, Кропоткине, Майкопе, Усть-Лабинске,
+    <p>Принять участие можно <a href="http://dostavka.pizza-sicilia.ru/">заказав доставку</a> или посетив любую пиццерию Сицилия в Ростове-на-Дону, Адлере, Анапе, Геленджике, Новороссийске, Сочи, Армварире, Белореченске, Горячем Ключе, Кропоткине, Майкопе, Усть-Лабинске,
       Каневской, Кореновске, Крымске, Ленинградской, Славянске-на-Кубани, Тимашевске и Тихорецке.</p>
     <br><br>
     <div class="text-center">
@@ -120,7 +124,7 @@
           <img class="p-1" style="" width="100%" src="pics/sicilia.png" alt="Pizza">
           <div class="card-body p-2 pb-3">
             <p class="h4 card-text">Сицилия</p>
-            <p class="small" style="height: 100px">Ветчина, Сервелат, Грибы, Томаты, Лук-карамель, сыр Моцарелла</p>
+            <p class="small" style="height: 80px">Ветчина, Сервелат, Грибы, Томаты, Лук-карамель, сыр Моцарелла</p>
             <p>40см, 1000г – 745р</p>
             <a class="card-link">
             <a class="btn btn-primary btn-lg" href="https://dostavka.pizza-sicilia.ru/pitstsa/pizza-40-cm-large/sitsiliya-pitstsa" role="button">Заказать</a>
@@ -134,7 +138,7 @@
           <img class="p-1 rotate" width="100%" src="pics/supreme.png" alt="Pizza">
           <div class="card-body p-2 pb-3">
             <p class="h4 card-text">Суприм</p>
-            <p class="small" style="height: 100px">Ветчина, Томаты, Грибы Шампиньоны, Огурцы Маринованные, Томатный Соус, Сыр Моцарелла, Соус Гриль, Перец Халапеньо, Колбаса Чили, Петрушка</p>
+            <p class="small" style="height: 80px">Ветчина, Томаты, Грибы Шампиньоны, Огурцы Маринованные, Томатный Соус, Сыр Моцарелла, Соус Гриль, Перец Халапеньо, Колбаса Чили, Петрушка</p>
             <p></p>
             <p>30см, 600г – 415р</p>
             <a class="card-link">
@@ -149,7 +153,7 @@
           <img class="p-1" style="" width="100%" src="pics/cesar.png" alt="Pizza">
           <div class="card-body p-2 pb-3">
             <p class="h4 card-text">Цезарь</p>
-            <p class="small" style="height: 100px">Куриное Филе, Ветчина, Бекон, Сыр Пармезан, Сыр Моцарелла, Салат Айсберг, Соус Цезарь, Томаты, Карамелизированный Лук</p>
+            <p class="small" style="height: 80px">Куриное Филе, Ветчина, Бекон, Сыр Пармезан, Сыр Моцарелла, Салат Айсберг, Соус Цезарь, Томаты, Карамелизированный Лук</p>
             <p></p>
             <p>40см, 1100г – 745р</p>
             <a class="card-link">
@@ -164,7 +168,7 @@
           <img class="p-1 rotate" style="" width="100%" src="pics/manchester.png" alt="Pizza">
           <div class="card-body p-2 pb-3">
             <p class="h4 card-text">Манчестер</p>
-            <p class="small" style="height: 100px">Куриное Филе, Бекон, Томаты, Луковый Конфитюр, Томатный Соус, Соус Барбекю, Сыр Моцарела, Прованские Травы</p>
+            <p class="small" style="height: 80px">Куриное Филе, Бекон, Томаты, Луковый Конфитюр, Томатный Соус, Соус Барбекю, Сыр Моцарела, Прованские Травы</p>
             <p></p>
             <p>40см, 1000г – 775р</p>
             <a class="card-link">
@@ -179,7 +183,7 @@
           <img class="p-1" style="" width="100%" src="pics/po-derevenski.png" alt="Pizza">
           <div class="card-body p-2 pb-3">
             <p class="h4 card-text">По-Деревенски</p>
-            <p class="small" style="height: 100px">Куриное Филе, Сыр Моцарелла, Копчёный Карбонад, Маринованные Огурцы, Шампиньоны, Зелёный Лук, Томаты, Красный Лук, Томатный Соус</p>
+            <p class="small" style="height: 80px">Куриное Филе, Сыр Моцарелла, Копчёный Карбонад, Маринованные Огурцы, Шампиньоны, Зелёный Лук, Томаты, Красный Лук, Томатный Соус</p>
             <p></p>
             <p>40см, 1100г – 689р</p>
             <a class="card-link">
@@ -202,24 +206,18 @@
   <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
 </p> -->
 
-    <hr class="my-4">
-
+    <!-- <hr class="my-4">
     <br>
     <p class="">Для "Сицилии" это был крутой год, мы открыли несколько новых пиццерий, провели битву официантов, запустили новое меню, выйграли в конкурсе HoReCa Don, на черную пятнцу просто выгорели всеми 33 ресторанам и центральным офисом от количества заказов,
       отметили 30-лейтний юбилей компании, сняли видео о мечатх сотрудников и еще много чего.</p>
     <p>Расскажите, как прошел год у Вас? Свинья принесла удачу или прошла незаметно? Что самого крутого и необычного случилось с Вами в этом году?</p>
     <br>
-    <!-- Put this div tag to the place, where the Comments block will be -->
     <div class="row">
-
       <div id="vk_comments"></div>
-
-
-    </div>
-
-
+    </div> -->
 
   </div>
+
   <div class="pb-1 text-center">
     <p>Счастливого Нового Года!
       <br>
@@ -247,6 +245,7 @@
       attach: "*"
     });
   </script>
+
 </body>
 
 </html>
