--- a/index.html
+++ b/index.html
@@ -23,14 +23,13 @@
   <link href="css/custom.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet">
 
-  <script type="text/javascript" src="https://vk.com/js/api/openapi.js?162"></script>
-
+  <!-- <script type="text/javascript" src="https://vk.com/js/api/openapi.js?162"></script>
   <script type="text/javascript">
     VK.init({
       apiId: 7247259,
       onlyWidgets: true
     });
-  </script>
+  </script> -->
 
   <!-- Yandex.Metrika counter -->
   <script type="text/javascript">
@@ -53,11 +52,9 @@
   <noscript><div><img src="https://mc.yandex.ru/watch/56668807" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
   <!-- /Yandex.Metrika counter -->
 
-
-
 </head>
 
-<body>
+<body style="height: 95vh;max-height: 95vh;">
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <a class="navbar-brand" href="#"><img width="64" src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/160/apple/81/pig-face_1f437.png"></a>
@@ -231,20 +228,20 @@
     <br>
 
   </div>
+
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
   <script src="js/snow-fall.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+  <!-- <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script> -->
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
-  <script type="text/javascript">
+  <!-- <script type="text/javascript">
     VK.Widgets.Comments("vk_comments", {
       limit: 20,
       attach: "*"
     });
-  </script>
+  </script> -->
 
 </body>
 
