--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </li> -->
       </ul>
       <span class="text-white" style="text-align: right">
-    <text class="h4">8 800 777 0878</text>
+    <a href="tel:+78007770878" style="text-decoration: none; color: white" class="h4">8 800 777 0878</a>
     <br>
     Телефон Доставки
   </span>
@@ -196,7 +196,8 @@
     <br>
     <div class="text-center">
       <h4>Единый Номер Доставки</h4>
-      <h1>8 800 777 0878</h1>
+      <!-- <h1>8 800 777 0878</h1> -->
+      <a href="tel:+78007770878" style="text-decoration: none; color: #333" class="h1">8 800 777 0878</a>
     </div>
 
     <!-- <p class="lead">
