--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>🐷2019 - Доедим свинью вместе</title>
+  <title>🐷 Доедим свинью вместе!</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Год подходит к концу, нужно успеть...">
   <meta name="author" content="Ruben Babaev">
@@ -80,7 +80,7 @@
       <span class="text-white" style="text-align: right">
     <a href="tel:+78007770878" style="text-decoration: none; color: white" class="h4">8 800 777 0878</a>
     <br>
-    Телефон Доставки
+    Единый Телефон Доставки
   </span>
       <!-- <form class="form-inline my-2 my-lg-0">
   <input class="form-control mr-sm-2" type="text" placeholder="Search">
@@ -90,7 +90,8 @@
   </nav>
 
   <div class="jumbotron">
-    <p class="lead">Год свиньи подходит к концу и мы решили проводить его особым образом – съесть 2019 пицц с беконом до конца года!</p>
+
+    <p class="lead">Год свиньи подходит к концу и мы решили проводить его особым способом – съесть 2019 пицц с беконом до конца года!</p>
     <br>
     <div class="text-center">
       <h5>🍕Пицц с 🐷беконом осталось съесть:</h5>
@@ -195,8 +196,7 @@
 
     <br>
     <div class="text-center">
-      <h4>Единый Номер Доставки</h4>
-      <!-- <h1>8 800 777 0878</h1> -->
+      <h4>Единый Телефон Доставки</h4>
       <a href="tel:+78007770878" style="text-decoration: none; color: #333" class="h1">8 800 777 0878</a>
     </div>
 
@@ -217,7 +217,9 @@
   </div>
 
   <div class="pb-1 text-center">
-    <p>Счастливого Нового Года!
+    <p>
+      Доедим 🐷 вместе!
+      <!-- Счастливого Нового Года! -->
       <br>
       <a href="http://pizza-sicilia.ru">Pizza-Sicilia.ru</a>
     </p>
