--- a/index.html
+++ b/index.html
@@ -70,28 +70,18 @@
         <li class="nav-item">
           <a class="nav-link" href="#">2020</a>
         </li>
-        <!-- <li class="nav-item">
-        <a class="nav-link" href="#">Pricing</a>
-      </li>
-      <li class="nav-item">
-      <a class="nav-link" href="#">About</a>
-    </li> -->
       </ul>
       <span class="text-white" style="text-align: right">
-    <a href="tel:+78007770878" style="text-decoration: none; color: white" class="h4">8 800 777 0878</a>
-    <br>
-    Единый Телефон Доставки
-  </span>
-      <!-- <form class="form-inline my-2 my-lg-0">
-  <input class="form-control mr-sm-2" type="text" placeholder="Search">
-  <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-</form> -->
+      <a href="tel:+78007770878" style="text-decoration: none; color: white" class="h4">8 800 777 0878</a>
+      <br>
+       Единый Телефон Доставки
+      </span>
     </div>
   </nav>
 
   <div class="jumbotron">
 
-    <p class="lead">Год свиньи подходит к концу и мы решили проводить его особым способом – съесть 2019 пицц с беконом до конца года!</p>
+    <p class="lead">Год свиньи подходит к концу и мы решили проводить его особым соревнованием – съесть 2019 пицц с беконом до конца года!</p>
     <br>
     <div class="text-center">
       <h5>🍕Пицц с 🐷беконом осталось съесть:</h5>
@@ -105,8 +95,11 @@
     <ul>
       <li>Съешь любую пиццу с беконом, карбонатом или ветчиной</li>
       <li>Сфотографируй или сохрани чек</li>
-      <li>Отмечайся в <a href="#">этом посте в Instagram</a> или <a href="#">ВКонтакте</a> и участвуй в розыгрыше 30 000 рублей на новогодние праздники</li>
+      <li>Отмечайся в <a href="#">этом посте в Instagram</a> или <a href="#">ВКонтакте</a> и участвуй в розыгрыше 30 000 рублей на новогодние праздники.</li>
     </ul>
+
+
+
     <p>Принять участие можно <a href="http://dostavka.pizza-sicilia.ru/">заказав доставку</a> или посетив любую пиццерию Сицилия в Ростове-на-Дону, Адлере, Анапе, Геленджике, Новороссийске, Сочи, Армварире, Белореченске, Горячем Ключе, Кропоткине, Майкопе, Усть-Лабинске,
       Каневской, Кореновске, Крымске, Ленинградской, Славянске-на-Кубани, Тимашевске и Тихорецке.</p>
     <br><br>
@@ -186,6 +179,51 @@
             <p>40см, 1100г – 689р</p>
             <a class="card-link">
             <a class="btn btn-primary btn-lg" href="https://dostavka.pizza-sicilia.ru/pitstsa/pizza-40-cm-large/poderevenski" role="button">Заказать</a>
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-12 col-md-3 p-1">
+        <div class="card mb-3 text-center ">
+          <img class="p-1" style="" width="100%" src="pics/fellini.png" alt="Pizza">
+          <div class="card-body p-2 pb-3">
+            <p class="h4 card-text">Феллини</p>
+            <p class="small" style="height: 80px">Куриное Филе, Фета, Халапеньо, Томаты, Бекон, Пепперони, Лук Порей, Томатный Соус</p>
+            <p></p>
+            <p>30см, 600г – 475р</p>
+            <a class="card-link">
+            <a class="btn btn-primary btn-lg" href="https://dostavka.pizza-sicilia.ru/pitstsa/pizza-30-cm-medium/fellini" role="button">Заказать</a>
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-12 col-md-3 p-1">
+        <div class="card mb-3 text-center ">
+          <img class="p-1 rotate" style="" width="100%" src="pics/grill.png" alt="Pizza">
+          <div class="card-body p-2 pb-3">
+            <p class="h4 card-text">Грилль</p>
+            <p class="small" style="height: 80px">Индейка Су-Вид, Ветчина, Томаты, Соус Гриль, Моцарелла</p>
+            <p></p>
+            <p>40см, 1100г – 705р</p>
+            <a class="card-link">
+            <a class="btn btn-primary btn-lg" href="https://dostavka.pizza-sicilia.ru/pitstsa/pizza-40-cm-large/gril-pitstsa" role="button">Заказать</a>
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-12 col-md-3 p-1">
+        <div class="card mb-3 text-center ">
+          <img class="p-1" style="" width="100%" src="pics/combo.jpg" alt="Pizza">
+          <div class="card-body p-2 pb-3">
+            <p class="h4 card-text">Комбо Корпоратив</p>
+            <p class="small" style="height: 80px">Ветчина и грибы 30см, Пицца Болоньезе 30см, Пицца Маргарита 30см, Пицца Пепперони 30см, Пицца Палермо 30см, Пицца Гавайи 30см, Пицца Бекон и Сыр 30см, Пицца Хемингуэй 30см</p>
+            <p></p>
+            <p>8х30см, 4000г – <strike>3937р</strike> <text class="text-success">2599р</text></p>
+            <a class="card-link">
+            <a class="btn btn-primary btn-lg" href="https://dostavka.pizza-sicilia.ru/kombonaboryi/korporativ" role="button">Заказать</a>
             </a>
           </div>
         </div>
