Paddings from fairy

--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
     <div class="row text-center m-0" style="">
 
       <div class="col-12 col-md-3 p-1">
-        <div class="card mb-3 text-center">
-          <img class="p-1" style="" width="100%" src="pics/sicilia.png" alt="Pizza">
+        <div class="card mb-3 p-3 text-center">
+          <img class="" style="" width="100%" src="pics/sicilia.png" alt="Pizza">
           <div class="card-body p-2 pb-3">
             <p class="h4 card-text">Сицилия</p>
             <p class="small" style="height: 80px">Ветчина, Сервелат, Грибы, Томаты, Лук-карамель, сыр Моцарелла</p>
@@ -125,8 +125,8 @@
       </div>
 
       <div class="col-12 col-md-3 p-1">
-        <div class="card mb-3 text-center">
-          <img class="p-1 rotate" width="100%" src="pics/supreme.png" alt="Pizza">
+        <div class="card mb-3 p-3 text-center">
+          <img class="rotate" width="100%" src="pics/supreme.png" alt="Pizza">
           <div class="card-body p-2 pb-3">
             <p class="h4 card-text">Суприм</p>
             <p class="small" style="height: 80px">Ветчина, Томаты, Грибы Шампиньоны, Огурцы Маринованные, Томатный Соус, Сыр Моцарелла, Соус Гриль, Перец Халапеньо, Колбаса Чили, Петрушка</p>
@@ -140,8 +140,8 @@
       </div>
 
       <div class="col-12 col-md-3 p-1">
-        <div class="card mb-3 text-center ">
-          <img class="p-1" style="" width="100%" src="pics/cesar.png" alt="Pizza">
+        <div class="card mb-3 p-3 text-center ">
+          <img class="" style="" width="100%" src="pics/cesar.png" alt="Pizza">
           <div class="card-body p-2 pb-3">
             <p class="h4 card-text">Цезарь</p>
             <p class="small" style="height: 80px">Куриное Филе, Ветчина, Бекон, Сыр Пармезан, Сыр Моцарелла, Салат Айсберг, Соус Цезарь, Томаты, Карамелизированный Лук</p>
@@ -155,8 +155,8 @@
       </div>
 
       <div class="col-12 col-md-3 p-1">
-        <div class="card mb-3 text-center ">
-          <img class="p-1 rotate" style="" width="100%" src="pics/manchester.png" alt="Pizza">
+        <div class="card mb-3 p-3 text-center ">
+          <img class="rotate" style="" width="100%" src="pics/manchester.png" alt="Pizza">
           <div class="card-body p-2 pb-3">
             <p class="h4 card-text">Манчестер</p>
             <p class="small" style="height: 80px">Куриное Филе, Бекон, Томаты, Луковый Конфитюр, Томатный Соус, Соус Барбекю, Сыр Моцарела, Прованские Травы</p>
@@ -170,8 +170,8 @@
       </div>
 
       <div class="col-12 col-md-3 p-1">
-        <div class="card mb-3 text-center ">
-          <img class="p-1" style="" width="100%" src="pics/po-derevenski.png" alt="Pizza">
+        <div class="card mb-3 p-3 text-center ">
+          <img class="" style="" width="100%" src="pics/po-derevenski.png" alt="Pizza">
           <div class="card-body p-2 pb-3">
             <p class="h4 card-text">По-Деревенски</p>
             <p class="small" style="height: 80px">Куриное Филе, Сыр Моцарелла, Копчёный Карбонад, Маринованные Огурцы, Шампиньоны, Зелёный Лук, Томаты, Красный Лук, Томатный Соус</p>
@@ -185,8 +185,8 @@
       </div>
 
       <div class="col-12 col-md-3 p-1">
-        <div class="card mb-3 text-center ">
-          <img class="p-1" style="" width="100%" src="pics/fellini.png" alt="Pizza">
+        <div class="card mb-3 p-3 text-center ">
+          <img class="" style="" width="100%" src="pics/fellini.png" alt="Pizza">
           <div class="card-body p-2 pb-3">
             <p class="h4 card-text">Феллини</p>
             <p class="small" style="height: 80px">Куриное Филе, Фета, Халапеньо, Томаты, Бекон, Пепперони, Лук Порей, Томатный Соус</p>
@@ -200,8 +200,8 @@
       </div>
 
       <div class="col-12 col-md-3 p-1">
-        <div class="card mb-3 text-center ">
-          <img class="p-1 rotate" style="" width="100%" src="pics/grill.png" alt="Pizza">
+        <div class="card mb-3 p-3 text-center ">
+          <img class="rotate" style="" width="100%" src="pics/grill.png" alt="Pizza">
           <div class="card-body p-2 pb-3">
             <p class="h4 card-text">Грилль</p>
             <p class="small" style="height: 80px">Индейка Су-Вид, Ветчина, Томаты, Соус Гриль, Моцарелла</p>
@@ -215,8 +215,8 @@
       </div>
 
       <div class="col-12 col-md-3 p-1">
-        <div class="card mb-3 text-center ">
-          <img class="p-1" style="" width="100%" src="pics/combo.jpg" alt="Pizza">
+        <div class="card mb-3 p-3 text-center ">
+          <img class="" style="" width="100%" src="pics/combo.jpg" alt="Pizza">
           <div class="card-body p-2 pb-3">
             <p class="h4 card-text">Комбо Корпоратив</p>
             <p class="small" style="height: 80px">Ветчина и грибы 30см, Пицца Болоньезе 30см, Пицца Маргарита 30см, Пицца Пепперони 30см, Пицца Палермо 30см, Пицца Гавайи 30см, Пицца Бекон и Сыр 30см, Пицца Хемингуэй 30см</p>
