--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
 <body style="height: 95vh;max-height: 95vh;">
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <a class="navbar-brand" href="#"><img width="64" src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/160/apple/81/pig-face_1f437.png"></a>
+    <a class="navbar-brand" href="#"><img src="pics/Sicilia-Logo_white.png" width='200px'></a>
+
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -71,6 +72,7 @@
           <a class="nav-link" href="#">2020</a>
         </li>
       </ul>
+
       <span class="text-white" style="text-align: right">
       <a href="tel:+78007770878" style="text-decoration: none; color: white" class="h4">8 800 777 0878</a>
       <br>
@@ -80,6 +82,7 @@
   </nav>
 
   <div class="jumbotron">
+
 
     <p class="lead">Год свиньи подходит к концу и мы решили проводить его особым соревнованием – съесть 2019 пицц с беконом до конца года!</p>
     <br>
