--- a/index.html
+++ b/index.html
@@ -57,10 +57,8 @@
 <body style="height: 95vh;max-height: 95vh;">
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-danger" style='!background-color: rgb(42,104,122)!important'>
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="https://pizza-sicilia.ru">
       <!-- <img src="pics/Sicilia-Logo_white.png" width='200px'> -->
-
-
         <img style='' src="pics/Sicilia-Logo_white.png" width='200px'>
     </a>
 
