--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>🐷 Доедим свинью вместе!</title>
+  <title>🐷 Доешь 2019 год!</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Год подходит к концу, нужно успеть...">
   <meta name="author" content="Ruben Babaev">
@@ -99,21 +99,26 @@
 
   <div class="jumbotron">
 
-    <div class="text-center h2"><p class="lead display-4">🍕🐷 Пиццу <br>c беконом</p></div>
+    <div class="text-center h2"><p class="lead display-4">✨🐷 Доешь 2019 год</p></div>
 
 
 
 
     <div class="text-center">
 
-      <p class="lead">Год свиньи подходит к концу и мы решили проводить его специальным соревнованием<br>– успеть съесть 2019 пицц с беконом до конца года!</p>
+      <!-- <p class="lead">Год свиньи подходит к концу и мы решили проводить его специальным соревнованием<br>– успеть съесть 2019 пицц с беконом до конца года!</p> -->
 
-      <h1 id="pizzaCount" style="font-size: 133px; font-family: 'Lobster', cursive;" class="display-1">121<h5>🍕Пицц с 🐷беконом съедено</h5></h1>
+      <p class="lead">Хо-хо-хо! Год свиньи подходит к концу и мы запускаем соревнование – <br>Успей доесть 2019 пицц с беконом до конца года и выиграй 30 000р от Сицилии!</p>
+
+
+
+
+      <h1 id="pizzaCount" style="font-size: 133px; font-family: 'Lobster', cursive;" class="display-1">121<h5>🍕 Пицц с беконом съедено 🐷</h5></h1>
       <div class="progress" style='height: 48px'>
         <div class="progress-bar progress-bar-striped bg-danger progress-bar-animated" role="progressbar" style="width: 6%;" aria-valuenow="121" aria-valuemin="0" aria-valuemax="2019">6%</div>
       </div>
-      <br>
-      <p class="lead">Дней до 🎅нового года: <b>16</b></p>
+
+      <p class="lead">🎅 Дней до нового года – <b>16</b></p>
 
     </div>
 
