--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
   <meta name="author" content="Ruben Babaev">
   <link rel="shortcut icon" href="favicon.ico">
 
-  <!-- <link rel="image_src" href="http://artchallenge.ru/share.jpg"> -->
+  <link rel="image_src" href="http://2019.pizza-sicilia.ru/share.jpg">
 
   <meta property="og:type" content="website" />
   <meta property="og:url" content="http://2019.pizza-sicilia.ru/" />
-  <!-- <meta property="og:image" content="http://artchallenge.ru/share.jpg" /> -->
+  <meta property="og:image" content="http://2019.pizza-sicilia.ru/share.jpg" />
   <meta property="og:site_name" content="🐷 Доешь 2019 год!"/>
   <meta property="og:title" content="🐷 Доешь 2019 год!" />
   <meta property="og:description" content="Год подходит к концу, нужно успеть..." />
