--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <div class="progress-bar progress-bar-striped bg-danger progress-bar-animated" role="progressbar" style="width: 6%;" aria-valuenow="121" aria-valuemin="0" aria-valuemax="2019">6%</div>
       </div>
 
-      <p class="lead">🎅 Дней до нового года – <b>16</b></p>
+      <p class="lead">🎅 Дней до нового года – <b>14</b></p>
 
     </div>
 
@@ -128,7 +128,7 @@
     <ul>
       <li>Съешь любую пиццу с беконом, карбонатом или ветчиной</li>
       <li>Сфотографируй или сохрани чек</li>
-      <li>Отмечайся в <a href="#">этом посте в Instagram</a> или <a href="#">ВКонтакте</a> и участвуй в розыгрыше 30 000 рублей на новогодние праздники.</li>
+      <li>Отмечайся в <a target="_blank" href="https://www.instagram.com/p/B6LF_OPIXXo/">этом посте в Instagram</a> <!-- или <a href="#">ВКонтакте</a> --> и участвуй в розыгрыше 30 000 рублей на новогодние праздники.</li>
     </ul>
     <p>Принять участие можно <a href="http://dostavka.pizza-sicilia.ru/">заказав доставку</a> или посетив любую пиццерию Сицилия!</p>
     <br>
