--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     <ul>
       <li>Съешь любую пиццу с беконом, карбонатом или ветчиной</li>
       <li>Сфотографируй или сохрани чек</li>
-      <li>Отмечайся в <a target="_blank" href="https://www.instagram.com/p/B6LF_OPIXXo/">этом посте в Instagram</a> <!-- или <a href="#">ВКонтакте</a> --> и участвуй в розыгрыше 30 000 рублей на новогодние праздники.</li>
+      <li>Отмечайся в <a target="_blank" href="https://www.instagram.com/p/B6LF_OPIXXo/">этом посте в Instagram</a> или <a target="_blank" href="https://vk.com/pizzasicilia?w=wall-61690394_13277">ВКонтакте</a> и участвуй в розыгрыше 30 000 рублей на новогодние праздники.</li>
     </ul>
     <p>Принять участие можно <a href="http://dostavka.pizza-sicilia.ru/">заказав доставку</a> или посетив любую пиццерию Сицилия!</p>
     <br>
